fix validation errors. fix horizontal scroll

--- a/src/css/arrow_btn.css
+++ b/src/css/arrow_btn.css
@@ -3,7 +3,7 @@
   pointer-events: none;
   position: fixed;
   bottom: 30px;
-  left: 50%;
+  right: 1%;
   transform: translateX(-50%);
   z-index: 999;
   align-items: center;
